Fixed some bugs highlighted by Harald

--- a/unik4430/lab_report.tex
+++ b/unik4430/lab_report.tex
@@ -65,10 +65,10 @@
   \subfloat[Oscilloscope capture 14:10:48]{\includegraphics[width=0.5\textwidth]{del_A_kjapp_CSAC2.png}\label{fig:f2}}
   \caption{Oscilloscope captures}
 \end{figure}
-Figure \ref{fig:f1} and \ref{fig:f2} is two screen shots taken from the oscilloscope. The yellow line is the Passive hydrogen maser, the blue is the CSAC. The oscilloscope is triggering on the input from the CSAC. 
+Figure \ref{fig:f1} and \ref{fig:f2} is two screen shots taken from the oscilloscope. The yellow line is the Passive hydrogen maser, the blue is the from the signal generator. The oscilloscope is triggering on the input from the signal generator. 
 
 \subsection{Observations}
-The two images shows the yellow line moving towards the right, indicating that the CSAC is a bit fast. When set to trigger on the maser instead, the effect is reversed, the blue line moves towards the left. 
+The two images shows the yellow line moving towards the right. The reason the yellow line is moving to the right, is because the frequency of the signal from the generator is higher and therefor "arrives earlier" than the signal from the maser. When set to trigger on the maser instead, the effect is reversed, the blue line moves towards the left. The generator is in other words, a little fast. 
 
 \subsection{Measuring relative frequency error}
 The period for each of the signals are 100 ns. By measuring the time it took for the two signals to go from being in phase once to twice (in phase, out of phase, in phase again), a relative frequency error can be calculated:
