Made some comments

--- a/unik4430/lab_report.tex
+++ b/unik4430/lab_report.tex
@@ -1,3 +1,9 @@
+% TODO
+% Sjekk bregni ch5 anngående relativ frekvensfeil. Bruk begreper.
+% Trigger uncertainty i manualen. Regn "slew-rate" og les i manualen. 
+% 1 delt på kvadratroten av antall samples som jeg har tatt gjennomsnitt over. Se skriv om allan 2 anggående hvitfasesteøy pga triggerkrets. 
+
+
 \documentclass[11pt,english,a4paper]{article}
 
 \usepackage[utf8]{inputenc}          % Allows UTF-8 encoded characters in the .tex-file.
@@ -180,6 +186,5 @@ The figure seems to suggest that having an higher amplitude thus passing the hys
     \includegraphics[width=1\textwidth]{mod_allan_last_part3.png}
     \label{fig:sg_10x_mod_allan_dev}
 \end{figure}
-
 
 \end{document}                     
